# masterthesis_llm_testing

./: .gitignore  api_tester.py  count_chars.py  lstlisting_creator.py  masterthesis_declaration.toml  pyproject.toml  run_experiments.py  run_tests.py
aggregation_scripts/: json_formatter.py  lstlisting_creator.py  time_count.py
inputs/: case1.yaml  case10.yaml  case2.yaml  case3.yaml  case4.yaml  case5.yaml  case6.yaml  case7.yaml  case8.yaml  case9.yaml
outputs/: RESULTS_GPT-5_CASE1_REPEAT0_20250909_1630.json  error_results_CASE-000_gpt-5-2025-08-07_20250909_1625.json  results_CASE-001_gpt-5-2025-08-07_20250908_1830.json  results_Gpt-5_Case1_REPEAT0_20250908_2212.json  results_case1_gpt-5-2025-08-07_20250908_1720.json  results_case1_gpt-5_20250908_1804.json  results_case1_gpt-5_20250908_1824.json
outputs/claude-sonnet-4/: RESULTS_CLAUDE-SONNET-4_CASE1_REPEAT0_PROMPT1_20250922_1748.json
outputs/final_experiment/: model_statistics.json
outputs/final_tests/: model_statistics.json
outputs/gemini-2.5-pro/: RESULTS_GEMINI-2.5-PRO_CASE1_REPEAT0_PROMPT1_20250922_1749.json
outputs/initial_tests/: results_CASE-001_gemini-2.5-pro_20250908_2159.json  results_GEMINI-2.5-PRO_CASE1_REPEAT0_20250908_2218.json  results_None_case1_REPEAT0_20250908_2206.json  results_case1_gpt-5-2025-08-07_20250902_0314.jsonl  results_case1_gpt-5-2025-08-07_20250902_0411.jsonl  (+4 more)
scripts/: final_experiment.bat  final_experiment.sh  ping_llm.bat  run_tests.bat  run_tests.sh  single_exec.sh
src/: config.py  llm_runner.py  model_prompts.py  runner.py  test_statistics.py  utils.py
(+158 files in other folders)
